# shima

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  macros.rs  main.rs
src/billing/: mod.rs
src/checkout/: mod.rs  value_objects.rs
src/customer/: mod.rs
src/value_objects/: customer.rs  metadata.rs  mod.rs  price.rs  urls.rs
src/webhook/: event.rs  mod.rs
