[package]
name = "shima"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/bytebury/shima"
homepage = "https://github.com/bytebury/shima"
authors = ["Bytebury LLC. <bytebury@gmail.com>"]
description = "A lightweight Stripe library designed for software-as-a-service providers, enabling easy integration with Stripe's API."
readme = "README.md"
keywords = ["shima", "stripe", "stripe-webhooks", "api", "simple-stripe", "stripe-api"]
license = "MIT"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
